# hawkeye_os

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mock_gcom.py
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: publisher.cpp  subscriber.cpp
src/orchestrator/: package.xml  setup.cfg  setup.py
src/orchestrator/orchestrator/: mock_image_capture.py  mock_object_detection.py  orchestrator.py
src/orchestrator/src/: orchestrator.py
src/py_pubsub/: package.xml  setup.py
src/py_pubsub/py_pubsub/: publisher.py  subscriber.py
